docs/sf-export/sfdx-raw/objects/SystemControlSettings__c/SystemControlSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>System Control Settings</label>
</CustomObject>