docs/sf-export/sfdx-raw/objects/SystemControlSettings__c/fields/Disable_Archived_Finalized_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Archived_Finalized_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Archived-Finalized Validation</label>
    <type>Checkbox</type>
</CustomField>