docs/sf-export/sfdx-raw/objects/SystemControlSettings__c/fields/Disable_Content_Document_Link_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Content_Document_Link_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Content Document Link Trigger</label>
    <type>Checkbox</type>
</CustomField>