docs/sf-export/sfdx-raw/objects/SystemControlSettings__c/fields/Disable_Event_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Event_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Event Trigger</label>
    <type>Checkbox</type>
</CustomField>